--- a/app/client/css/main.styl
+++ b/app/client/css/main.styl
@@ -7,7 +7,8 @@ $col = 80px
 $gutter = 16px
 .container
   margin: 0 auto
-  width: ($col * $cols)+($gutter * $cols)
+  padding: 0 15px
+  width: 100% //($col * $cols)+($gutter * $cols)
 .row
   clear: both
 .col
@@ -41,7 +42,7 @@ html
 
 // TYPOGRAPHY
 
-$font-size-basic = 19px
+$font-size-basic = 49px
 $font-leading-basic = 1.4em
 
 $font-size-h1 = 40px
